--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   # Functional programming thingies
   dartz: ^0.9.2
   # Remote API
-  connectivity: ^2.0.0
+  data_connection_checker: ^0.3.4
   http: ^0.12.2
   # Local cache
   shared_preferences: ^0.5.12+2
